dhall/tests/type-errors/unit/TypeAnnotationWrong.txt
Type error: error: annot mismatch: (1 : Natural) : Bool
 --> <current file>:1:0
  |
1 | 1 : Bool
  | ^^^^^^^^ annot mismatch: (1 : Natural) : Bool
  |
